# robot_control_gui

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  TODO.md  docker-compose.yml  format_code.sh  package.xml  project_structure
config/: local_costmap_params.yaml  rendering.yaml  rviz_config.yaml
docker/: entrypoint.sh
docs/: action_configuration.md  auto_localization.md  mapping_guide.md  network_configuration.md  troubleshooting.md
docs/api/: README.md
docs/design/: README.md  architecture.md
docs/development/: README.md  code_style.md  path_planning.md
include/: mainwindow.h
include/core/: robot_controller.h
include/ros/: mapping_controller.h  navigation_controller.h  robot_controller.h
include/ui/: action_block.h  action_block_factory.h  action_block_widget.h  action_commands.h  action_configurator.h  action_list_widget.h  action_selection_dialog.h  action_sequence_manager.h  action_sequence_panel.h  condition_action_block.h  connection_line.h  control_panel.h  dashboard_window.h  delay_action_block.h  goal_setting_dialog.h  initial_pose_dialog.h  joystick_widget.h  loop_action_block.h  main_window.h  main_window_private.h  map_view.h  map_view_widget.h  mapping_dialog.h  mapping_panel.h  move_action_block.h  movement_action_block.h  navigation_action_block.h  navigation_panel.h  path_action_block.h  path_editor.h  path_visualizer.h  planner_settings_dialog.h  property_editor.h  robot_status_panel.h  rviz_view.h  settings_panel.h  settings_widget.h  speed_dashboard.h  speed_display.h  teleop_panel.h  (+4 more)
include/ui/actions/: action_block.h  action_block_factory.h  action_commands.h  action_sequence_manager.h  condition_action_block.h  delay_action_block.h  loop_action_block.h  move_action_block.h  movement_action_block.h  navigation_action_block.h  path_action_block.h  wait_action_block.h
include/ui/dialogs/: action_selection_dialog.h  goal_setting_dialog.h  mapping_dialog.h  planner_settings_dialog.h
include/ui/panels/: action_sequence_panel.h  control_panel.h  mapping_panel.h  navigation_panel.h  robot_status_panel.h  settings_panel.h  teleop_panel.h
include/ui/sensor_display/: camera_view.h
include/ui/widgets/: action_block_widget.h  action_list_widget.h  battery_indicator.h  camera_view.h  connection_line.h  dashboard_window.h  joystick_widget.h  path_editor.h  path_visualizer.h  property_editor.h  rviz_view.h  speed_dashboard.h  speed_display.h
include/widgets/: battery_indicator.h  speed_display.h
launch/: cartographer.launch  custom_amcl.launch  gmapping.launch  hector_slam.launch  real_robot.launch  test_house_navigation.launch  test_navigation.launch  test_stage_navigation.launch  turtlebot3_simulation.launch
maps/: test_map.pgm  test_map.yaml
rviz/: navigation.rviz
scripts/: add_license.py  add_license.sh  dependency_analyzer.py  fix_includes.py  generate_map.py  publish_test_data.py  signal_flow_analyzer.py  update_signal_flow.sh
src/: main.cpp
src/launch/: robot_control_gui.launch  test_map_view.launch
src/launch/test/: test_gui_functions.launch  test_joystick.launch  test_main_window.launch  test_robot_status.launch
src/ros/: mapping_controller.cpp  navigation_controller.cpp  robot_controller.cpp
src/test/: test_dashboard_main.cpp  test_dashboard_window.cpp  test_gui_functions.cpp  test_joystick.cpp  test_main_window.cpp  test_map_view.cpp  test_robot_status.cpp  test_robot_status_panel.cpp  test_robot_status_panel_main.cpp
src/ui/: action_block.cpp  action_block_factory.cpp  action_block_widget.cpp  action_commands.cpp  action_configurator.cpp  action_list_widget.cpp  action_selection_dialog.cpp  action_sequence_manager.cpp  action_sequence_panel.cpp  condition_action_block.cpp  connection_line.cpp  control_panel.cpp  dashboard_window.cpp  delay_action_block.cpp  goal_setting_dialog.cpp  initial_pose_dialog.cpp  joystick_widget.cpp  loop_action_block.cpp  main_window.cpp  map_view.cpp  map_view_widget.cpp  mapping_dialog.cpp  mapping_panel.cpp  move_action_block.cpp  movement_action_block.cpp  navigation_action_block.cpp  navigation_panel.cpp  path_action_block.cpp  path_editor.cpp  path_visualizer.cpp  planner_settings_dialog.cpp  property_editor.cpp  robot_status_panel.cpp  rviz_view.cpp  settings_panel.cpp  settings_widget.cpp  speed_dashboard.cpp  speed_display.cpp  teleop_panel.cpp  teleoperation_panel.cpp  (+4 more)
src/ui/actions/: action_block.cpp  action_block_factory.cpp  action_commands.cpp  action_sequence_manager.cpp  condition_action_block.cpp  delay_action_block.cpp  loop_action_block.cpp  move_action_block.cpp  movement_action_block.cpp  navigation_action_block.cpp  path_action_block.cpp  wait_action_block.cpp
src/ui/dialogs/: action_selection_dialog.cpp  goal_setting_dialog.cpp  mapping_dialog.cpp  planner_settings_dialog.cpp
src/ui/panels/: action_sequence_panel.cpp  control_panel.cpp  mapping_panel.cpp  navigation_panel.cpp  robot_status_panel.cpp  settings_panel.cpp  teleoperation_panel.cpp
src/ui/sensor_display/: camera_view.cpp
src/ui/widgets/: action_block_widget.cpp  action_list_widget.cpp  battery_indicator.cpp  camera_view.cpp  connection_line.cpp  dashboard_window.cpp  joystick_widget.cpp  path_editor.cpp  path_visualizer.cpp  property_editor.cpp  rviz_view.cpp  speed_dashboard.cpp  speed_display.cpp
src/widgets/: battery_indicator.cpp  speed_display.cpp
