<?xml version="1.0"?>
<package format="2">
  <name>robot_control_gui</name>
  <version>0.1.0</version>
  <description>
    A universal Qt-based GUI for multi-robot control, supporting basic teleoperation,
    status monitoring, SLAM mapping, path planning, and sensor data visualization.
  </description>

  <maintainer email="jialonglong@todo.todo">jialonglong</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Core -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>std_srvs</depend>

  <!-- Visualization -->
  <depend>rviz</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <!-- Qt Dependencies -->
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>libqt5-dev</build_depend>
  <build_depend>libqt5-serialport-dev</build_depend>
  <build_depend>libqt5-network-dev</build_depend>
  <build_depend>libqt5-xml-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>libqt5-network</exec_depend>
  <exec_depend>libqt5-serialport</exec_depend>
  <exec_depend>libqt5-xml</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>

  <!-- Added rospy dependency -->
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <!-- SLAM related dependencies -->
  <depend>gmapping</depend>
  <depend>cartographer_ros</depend>
  <depend>hector_mapping</depend>
  <depend>hector_trajectory_server</depend>
  <depend>map_server</depend>

  <!-- Navigation related dependencies -->
  <depend>move_base</depend>
  <depend>amcl</depend>
  <depend>global_planner</depend>
  <depend>dwa_local_planner</depend>

  <!-- Visualization related dependencies -->
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
